# cv-generator-api

./: README.md  makefile
ai-service/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum
analytics_contracts/: analytic_schemas.json  analytic_schemas.yaml
cv-service/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum
gateway-service/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum
generator-service/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum
healthcheck-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.dev.yml  docker-compose.yml
healthcheck-service/proto/: health.proto
healthcheck-service/src/: config.rs  main.rs
healthcheck-service/src/grpc/: health.rs
healthcheck-service/src/handlers/: health.rs  index.rs  mod.rs
healthcheck-service/src/services/: errors.rs  gateway.rs  grpc_service.rs  health_check.rs  minio.rs  mod.rs  rabbitmq.rs
healthcheck-service/templates/: index.html
information-service/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod
monitoring-service/: .env.example  docker-compose.yml
shared-network/: .env.example  README.md  docker-compose.yml
templates-service/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum
user-service/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum
(+266 files in other folders)
